# vctx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.hermes/plans/: 2026-06-25_145239-knowledge-flow-slice-priority.md
docs/: api.md  architecture.md  context.md  development.md
docs/examples/: vctx.visual-auto-side-effect.toml
scripts/: check_module_layout.py  smoke_knowledge_flow.py  smoke_local_asr.py  smoke_url_subtitles.py
tests/: test_ai_dispatch_contracts.py  test_chunk_command.py  test_cli_config_selection.py  test_config_and_transforms.py  test_config_file.py  test_doctor_command.py  test_faster_whisper_asr.py  test_instance_config.py  test_knowledge_flow.py  test_knowledge_flow_bundle.py  test_knowledge_flow_llm.py  test_local_prepare.py  test_metadata_command.py  test_model_resolution.py  test_multilingual_preservation.py  test_net_runtime.py  test_online_asr.py  test_openrouter_registry.py  test_prepare_asr_integration.py  test_prepare_llm_essential_cases.py  test_prepare_llm_knowledge_flow.py  test_prepare_partial.py  test_prepare_url.py  test_prepare_url_asr.py  test_prepare_visual_capture.py  test_prepare_visual_ocr.py  test_prepare_visual_vlm.py  test_render_command.py  test_render_knowledge_flow.py  test_render_visual_records.py  test_smoke_knowledge_flow.py  test_text_ai.py  test_visual_acquisition_planning.py  test_visual_cases.py  test_visual_cases_llm.py  test_visual_evidence_scoring.py  test_visual_frames.py  test_visual_model_ref_routes.py  test_visual_motive_satisfaction.py  test_visual_ocr.py  (+4 more)
(+52 files in other folders)
