[project]
name = "vctx"
version = "0.1.0"
description = "Video to context pack CLI for AI agents and automation."
license = "MIT"
authors = [
    { name = "nostalgia", email = "nostalucent@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "srt>=3.5.3",
    "tenacity>=9.1.2",
    "typer>=0.26.7",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
vctx = "vctx:main"

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.2.1",
]
visual = [
    "onnxruntime>=1.20.0",
    "rapidocr>=3.4.2",
]
full = [
    "faster-whisper>=1.2.1",
    "onnxruntime>=1.20.0",
    "rapidocr>=3.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

